# bookman

./: .gitignore  CLAUDE.md  README.md  design.md  pyproject.toml  requirements.md
bs/: format.zsh  lint.zsh  test.zsh
src/bookman/: __init__.py  bookman_types.py  constants.py  create.py  events.py  primitives.py
src/bookman/aggregators/: __init__.py  aggregator.py  combinators.py  results.py  runners.py
src/bookman/aggregators/zoo/: __init__.py  distinct.py  scalar.py  series.py
src/bookman/events/: __init__.py  constants.py  create.py  events.py
src/bookman/export/: __init__.py  otel.py  prometheus.py
