[project]
name = "bookman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Róisín Grannell", email = "r.grannell2@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
bookman = "bookman:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "vulture",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "BLE", "SIM", "RUF"]
